--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
   "author": "Ayaz",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "mysql": "^2.17.1",
+    "mysql2": "^2.0.1",
+    "nodemon": "^2.0.1",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.7.2"
   }
 }
