--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "Ayaz",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "mysql2": "^2.0.1",
     "sequelize": "^5.21.2",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
